<resources>
    <string name="app_name">AccessControl</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="re_password">Confirm password</string>
    <string name="first_name">First name</string>
    <string name="second_name">Second name</string>
    <string name="email">E-mail</string>
    <string name="phone_number">Phone number</string>
    <string name="staff">Staff</string>
    <string name="student">Student</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="living_cost">Living cost for last month</string>
    <string name="electricity">Electricity</string>
    <string name="gas">Gas</string>
    <string name="water">Water</string>
    <string name="total">Total</string>
    <string name="loading">Loading…</string>


    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_living_cost">Living cost</string>
    <string name="menu_penalty_amount">Penalty amount</string>
    <string name="menu_logout">Logout</string>
</resources>