<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.accesscontrol.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.accesscontrol.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_living_cost"
        android:name="com.example.accesscontrol.ui.livingcost.LivingCostFragment"
        android:label="@string/menu_living_cost"
        tools:layout="@layout/fragment_living_cost" />

    <fragment
        android:id="@+id/nav_penalty_amount"
        android:name="com.example.accesscontrol.ui.penaltyamount.PenaltyAmountFragment"
        android:label="@string/menu_penalty_amount"
        tools:layout="@layout/fragment_penalty_amount" />

    <activity
        android:id="@+id/nav_logout"
        android:name="com.example.accesscontrol.MainActivity"
        android:label="@string/menu_logout"
        tools:layout="@layout/activity_main" />
</navigation>