<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <TextView
        android:id="@+id/page_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100sp"
        android:fontFamily="@font/titan_one"
        android:gravity="center_horizontal"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/page_info"
        android:layout_marginHorizontal="90sp"
        android:layout_marginTop="30sp"
        android:backgroundTint="@color/teal_700"
        android:fontFamily="@font/titan_one"
        android:hint="@string/username"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_marginHorizontal="90sp"
        android:layout_marginVertical="10sp"
        android:backgroundTint="@color/teal_700"
        android:fontFamily="@font/titan_one"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/re_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginHorizontal="90sp"
        android:layout_marginVertical="10sp"
        android:backgroundTint="@color/teal_700"
        android:fontFamily="@font/titan_one"
        android:hint="@string/re_password"
        android:inputType="textPassword"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/re_password"
        android:layout_marginHorizontal="90sp"
        android:layout_marginTop="10sp"
        android:backgroundTint="@color/teal_700"
        android:fontFamily="@font/titan_one"
        android:hint="@string/first_name"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/second_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first_name"
        android:layout_marginHorizontal="90sp"
        android:layout_marginTop="10sp"
        android:backgroundTint="@color/teal_700"
        android:fontFamily="@font/titan_one"
        android:hint="@string/second_name"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/second_name"
        android:layout_marginHorizontal="90sp"
        android:layout_marginTop="10sp"
        android:backgroundTint="@color/teal_700"
        android:fontFamily="@font/titan_one"
        android:hint="@string/email"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginHorizontal="90sp"
        android:layout_marginTop="10sp"
        android:backgroundTint="@color/teal_700"
        android:fontFamily="@font/titan_one"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textSize="14sp" />

    <RadioGroup
        android:id="@+id/role"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_below="@id/phone_number">


        <LinearLayout
            android:id="@+id/horizontal_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="90sp">

            <RadioButton
                android:id="@+id/staff"
                android:layout_width="115sp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/titan_one"
                android:text="@string/staff" />

            <RadioButton
                android:id="@+id/student"
                android:layout_width="115sp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/titan_one"
                android:text="@string/student" />
        </LinearLayout>
    </RadioGroup>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/role"
        android:layout_marginHorizontal="90sp"
        android:layout_marginVertical="10sp"
        android:backgroundTint="@color/teal_700"
        android:fontFamily="@font/titan_one"
        android:hint="@string/sign_up"
        android:onClick="signUp"
        android:textSize="14sp" />

</RelativeLayout>