<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/page_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="220sp"
        android:fontFamily="@font/titan_one"
        android:gravity="center_horizontal"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/page_info"
        android:layout_marginHorizontal="90sp"
        android:layout_marginTop="30sp"
        android:backgroundTint="@color/teal_700"
        android:fontFamily="@font/titan_one"
        android:hint="@string/username"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_marginHorizontal="90sp"
        android:layout_marginVertical="10sp"
        android:backgroundTint="@color/teal_700"
        android:fontFamily="@font/titan_one"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:fontFamily="@font/titan_one"
        android:gravity="center_horizontal"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textSize="12sp"
        android:layout_below="@+id/password"
        android:textColor="@color/link"
        android:onClick="signUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_up"
        android:layout_marginHorizontal="90sp"
        android:layout_marginVertical="10sp"
        android:backgroundTint="@color/teal_700"
        android:fontFamily="@font/titan_one"
        android:onClick="signUp"
        android:hint="@string/sign_in"
        android:textSize="14sp" />
</RelativeLayout>